# R-darts

./: README.md  main.py  pyproject.toml  pyrightconfig.json
cnn/: architect.py  genotypes.py  hierarchical_model.py  hierarchical_model_search.py  hierarchical_operations.py  model.py  model_search.py  operations.py  test.py  test_imagenet.py  train.py  train_hierarchical_search.py  train_imagenet.py  train_search.py  utils.py  visualize.py
rnn/: architect.py  data.py  model.py  model_search.py  test.py  train.py  train_search.py  utils.py  visualize.py
